News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/Genera_Account_Type_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Genera Account Type Mapping</label>
</CustomObject>