News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/CreatedByNFSS__c.field-meta.xml
<CustomField>
    <fullName>CreatedByNFSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedByNFSS</label>
    <type>Checkbox</type>
</CustomField>