News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/CreatedBySales__c.field-meta.xml
<CustomField>
    <fullName>CreatedBySales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedBySales</label>
    <type>Checkbox</type>
</CustomField>