News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/isABNrequired__c.field-meta.xml
<CustomField>
    <fullName>isABNrequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isABNrequired</label>
    <type>Checkbox</type>
</CustomField>