News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/Owning_Credit_Division__c.field-meta.xml
<CustomField>
    <fullName>Owning_Credit_Division__c</fullName>
    <description>Values: NO, YES, NATIONAL</description>
    <label>Owning Credit Division</label>
    <length>8</length>
    <type>Text</type>
</CustomField>