News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Parent value mapping</description>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>