News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/Request_Account_Divisions__c.field-meta.xml
<CustomField>
    <fullName>Request_Account_Divisions__c</fullName>
    <description>Values: YES, NO, ALL</description>
    <label>Request Account Divisions</label>
    <length>3</length>
    <type>Text</type>
</CustomField>