News UAT/force-app/main/default/objects/Genera_Account_Type_Mapping__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Genera value for Account Type</description>
    <inlineHelpText>Genera value for Account Type</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>